headers and glyphs

--- a/public/the_bridge_templates/mappings/edit.html
+++ b/public/the_bridge_templates/mappings/edit.html
@@ -26,7 +26,7 @@
   <label>
     <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active' ng-change="saveMapping()" ng-disabled="!mapping.enabled || !mapping.can_be_enabled"> Auto-fetch (10 min)
   </label>
-  <label>Data Source: {{mapping.odk_form.name}}</label>
+  <label>Source app: <strong>ODK</strong>; Source table: <strong>{{mapping.odk_form.name}}</strong></label>
 </div>
 
 <div class="row sf-row" bs-affix data-offset-top="225" data-on-affix="onAffix()" data-on-unaffix="onUnaffix()">
