--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -22,7 +22,7 @@
 
       <div class="new-product-link">
           <a href="https://www.formstack.com/forms/?1874808-i8hgbPcov5" class="website-link" target="_blank">
-          <i class="glyphicon glyphicon-plus"></i> Add your product...</a>
+          <i class="fa fa-plus"></i> Add your product...</a>
 
           <label style="margin-left:12em" class="btn website-link" ng-model="searchFilters.integrated" btn-checkbox>Integrated?</label>
 
@@ -41,14 +41,14 @@
         {{product.name}}
       </h2>
       <div class='rating'>
-        <i class="glyphicon glyphicon-star"></i>
-        <i class="glyphicon glyphicon-star"></i>
-        <i class="glyphicon glyphicon-star"></i>
+        <i class="fa fa-star"></i>
+        <i class="fa fa-star"></i>
+        <i class="fa fa-star"></i>
         (sample rating)
       </div>
       <div class='actions'>
-        <a ng-href="{{product.website}}" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
-        <a ng-href="{{product.update_link}}" target="_blank"><i class="glyphicon glyphicon-edit"></i></a>
+        <a ng-href="{{product.website}}" target="_blank"><i class="fa fa-link"></i></a>
+        <a ng-href="{{product.update_link}}" target="_blank"><i class="fa fa-pencil"></i></a>
       </div>
 
 
