--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -2,7 +2,9 @@
 <div class="ideas">
 <header class="header-image">
   <div class="headline">
-    <h1><strong>PRICING</strong></h1>
+    <h1><i class="fa fa-credit-card"></i>
+ tiered<strong>Pricing</strong></h1>
+ <h3>Unlock the <strong>potential</strong> of your current technologies.</h3>
   </div>
 </header>
 
