--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -29,7 +29,7 @@
           </a>
 
           <label style="float: right;" class="btn btn-meh" ng-model="searchFilters.integrated" btn-checkbox>
-              <i class="fa fa-connectdevelop"></i> Integrated?
+              <i class="fa fa-cubes"></i>  Integrated?
           </label>
 
         </div>
@@ -42,7 +42,7 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
-            (sample rating)
+            (N votes for integration)
           </div>
           <h3 class="title">
             {{product.name}}
@@ -52,7 +52,7 @@
           </div>
 
           <a ng-href="{{product.website}}" class="website-link" target="_blank">
-            <i class="fa fa-link"></i>
+            <i class="fa fa-home"></i>
           </a>
           <!-- MAKE THIS LINK DO NOTHING UNTIL PRODUCT PAGE LOOKS GREAT
           <a ng-href="/#/product/{{product.id}}" class="details-link">
@@ -60,7 +60,9 @@
           </a>
           -->
           <a ng-href="#" class="details-link">
-            details coming soon
+            + <i class="fa fa-cube"></i>
+
+
           </a>
 
         </div>
