--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -19,7 +19,7 @@
             <div class="col-lg-2 col-md-3 col-xs-6 col-lg-offset-1">
                 <ul class="plan plan1">
                     <li class="plan-name">
-                        Free Forever
+                        Free
                     </li>
                     <li class="plan-price">
                         <strong>$0</strong> / mo.
@@ -96,7 +96,7 @@
                   <strong>$79</strong> / mo.
               </li>
               <li>
-                  <strong>2</strong> project
+                  <strong>2</strong> projects
               </li>
               <li>
                   <strong>5</strong> users
