--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -130,7 +130,7 @@
       <div class="featurette dark">  
       <div class="row">
               <div class="text-center">
-          <a href="mailto:admin@openfn.org" class="btn btn-primary btn-lg">
+          <a href="mailto:admin@openfn.org" class="btn btn-danger btn-lg">
             <i class="fa fa-life-buoy"></i>
             Help!
           </a>
