--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -3,7 +3,7 @@
 	<div class="headline">
 		<h1><i class="fa fa-code"></i>
  open<strong>Developments</strong></h1>
- <h3>Vote for <a href="https://trello.com/b/uOdx8xCZ/open-fn-development">features <i class="fa fa-trello"></i></a>, browse our <a href="https://github.com/OpenFn/OpenFn-Site/">repo <i class="fa fa-github"></i></a>, or watch our progress here.
+ <h3>Vote for <a href="https://trello.com/b/uOdx8xCZ/open-fn-development">features <i class="fa fa-trello"></i></a>&nbsp;in our product backlog, browse our <a href="https://github.com/OpenFn/OpenFn-Site/">repo <i class="fa fa-github"></i></a>, or watch our progress here.
 </h3>
 	</div>
 </header>
