remove pricing from navbar

--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -76,7 +76,7 @@
                         <strong>limited</strong> support
                     </li>
                     <li>
-                        <strong>1000</strong> jobs/mo.
+                        <strong>1000*</strong> jobs/mo.
                     </li>
                     <li>
                       <strong>auto</strong> sync
@@ -111,7 +111,7 @@
                   <strong>email</strong> support
               </li>
               <li>
-                  <strong>1000</strong> jobs/mo.
+                  <strong>1000*</strong> jobs/mo.
               </li>
               <li>
                 <strong>auto</strong> sync
@@ -191,5 +191,5 @@
      </ul>
  </div>
 </div>
-
+<div class="col-md-10 col-md-offset-1">*Contact us to increase this limit.</div>
 </div>
