--- a/public/the_bridge_templates/mappings/odk_column.html
+++ b/public/the_bridge_templates/mappings/odk_column.html
@@ -21,7 +21,7 @@
             ng-repeat="relationshipField in salesforceObject.relationshipFields" 
             ng-style="{'background-color': relationshipField.color}">
             <div class="required" ng-hide="relationshipField.properties.nillable"></div>
-            <i title="Unique" class="unique fa fa-asterisk" ng-show="relationshipField.properties.unique"></i>
+            <i title="Unique" class="unique fa fa-key" ng-show="relationshipField.properties.unique"></i>
             {{relationshipField.properties.label || relationshipField.field_name}}
             <a href="#" class='fa fa-minus-circle' ng-click="deleteRelationship(relationshipField)"></a>
           </li>
@@ -43,7 +43,7 @@
             ng-style="{'background-color': sfField.color}">
 
             <div class="required" ng-hide="sfField.properties.nillable"></div>
-            <i title="Unique" class="unique fa fa-asterisk" ng-show="sfField.properties.unique"></i>
+            <i title="Unique" class="unique fa fa-key" ng-show="sfField.properties.unique"></i>
 
             {{sfField.properties.label || sfField.field_name}}
             <a href="#" class='fa fa-minus-circle' ng-click="deleteField(sfField)"></a>
