--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -48,7 +48,7 @@
             {{product.name}}
           </h3>
           <div class='content'>
-            {{product.description}}
+            {{product.description | limitTo:410}}
           </div>
 
           <a ng-href="{{product.website}}" class="website-link" target="_blank">
