mapping, header padding, links

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -147,7 +147,7 @@
       </div>
       <div class="row" id="opensource-links">
         <div class="text-center">
-          <a href="https://github.com/OpenFn/OpenFn-Site">
+          <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
             <i class="fa fa-github"></i>
           </a>
         </div>
