--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -1,10 +1,13 @@
 <div class="ideas">
+
 <header class="header-image">
 	<div class="headline">
-		<h1><i class="fa fa-code"></i>
- open<strong>Developments</strong></h1>
- <h3>Vote for <a href="https://trello.com/b/uOdx8xCZ/open-fn-development" target="_blank">features <i class="fa fa-trello"></i></a>&nbsp;in our product backlog, browse our <a href="https://github.com/OpenFn/OpenFn-Site/" target="_blank">repo <i class="fa fa-github"></i></a>, or watch our progress here.
-</h3>
+		<h1>
+			<i class="fa fa-code"></i> open<strong>Developments</strong>
+		</h1>
+ 		<h3>
+ 			Vote for <a href="https://trello.com/b/uOdx8xCZ/open-fn-development" target="_blank">features <i class="fa fa-trello"></i></a>&nbsp;in our product backlog, browse our <a href="https://github.com/OpenFn/OpenFn-Site/" target="_blank">repo <i class="fa fa-github"></i></a>, or watch our progress here.
+		</h3>
 	</div>
 </header>
 
@@ -13,11 +16,11 @@
     <hr class="dark">
 
 <div class="container">
-<div ng-controller="ReleaseNotesController as releaseNotes">
-	<div ng-repeat="post in release_notes" class="release-note">
-    <div ng-bind-html="post.title" class="title"></div>
-		<div ng-bind-html="post.content" class="content"></div>
+	<div ng-controller="ReleaseNotesController as releaseNotes">
+		<div ng-repeat="post in release_notes" class="release-note">
+    		<div ng-bind-html="post.title" class="title">
+       		</div>
+			<div ng-bind-html="post.content" class="content">
+			</div>
+		</div>
 	</div>
-</div>
-</div>
-</div>
