--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -1,93 +1,96 @@
 <div class="pricing">
 <div class="ideas">
+
 <header class="header-image">
   <div class="headline">
-    <h1><i class="fa fa-credit-card"></i>
- tiered <strong>Pricing</strong></h1>
- <h3>Unlock the <strong>potential</strong> of your current technologies.</h3>
+    <h1>
+      <i class="fa fa-credit-card"></i> tiered <strong>Pricing</strong>
+    </h1>
+    <h3>
+      Unlock the <strong>potential</strong> of your current technologies.
+    </h3>
   </div>
 </header>
 
 <div class="featurette dark">
   <hr class="light">
-    <hr class="dark">
+  <hr class="dark">
     <div class="container">
 
         <br>
 
         <div class="row flat">
-            <div class="col-lg-2 col-md-3 col-xs-6 col-lg-offset-1">
-                <ul class="plan plan1">
-                    <li class="plan-name">
-                        Free
-                    </li>
-                    <li class="plan-price">
-                        <strong>$0</strong> / mo.
-                    </li>
-                    <li>
-                        <strong>1</strong> project
-                    </li>
-                    <li>
-                        <strong>1</strong> user
-                    </li>
-                    <li>
-                        <strong>2</strong> apps
-                    </li>
-                    <li>
-                        <strong>1</strong> map
-                    </li>
-                    <li>
-                        <strong>limited</strong> support
-                    </li>
-                    <li>
-                        <strong>100</strong> jobs/mo.
-                    </li>
-                    <li>
-                      <strong>auto</strong> sync
-                  </li>
-                    <li class="plan-action">
-                        <a href="#" class="btn btn-success btn-lg">Sign up</a>
-                    </li>
-                    
-                </ul>
-            </div>
+          <div class="col-lg-2 col-md-3 col-xs-6 col-lg-offset-1">
+            <ul class="plan plan1">
+              <li class="plan-name">
+                  Free
+              </li>
+              <li class="plan-price">
+                  <strong>$0</strong> / mo.
+              </li>
+              <li>
+                  <strong>1</strong> project
+              </li>
+              <li>
+                  <strong>1</strong> user
+              </li>
+              <li>
+                  <strong>2</strong> apps
+              </li>
+              <li>
+                  <strong>1</strong> map
+              </li>
+              <li>
+                  <strong>limited</strong> support
+              </li>
+              <li>
+                  <strong>100</strong> jobs/mo.
+              </li>
+              <li>
+                <strong>auto</strong> sync
+              </li>
+              <li class="plan-action">
+                  <a href="#" class="btn btn-success btn-lg">Sign up</a>
+              </li>  
+            </ul>
+          </div>
 
-            <div class="col-lg-2 col-md-3 col-xs-6">
-                <ul class="plan plan2">
-                    <li class="plan-name">
-                        Entry
-                    </li>
-                    <li class="plan-price">
-                        <strong>$39</strong> / mo.
-                    </li>
-                    <li>
-                        <strong>1</strong> project
-                    </li>
-                    <li>
-                        <strong>1</strong> user
-                    </li>
-                    <li>
-                        <strong>2</strong> apps
-                    </li>
-                    <li>
-                        <strong>3</strong> maps
-                    </li>
-                    <li>
-                        <strong>limited</strong> support
-                    </li>
-                    <li>
-                        <strong>1000</strong> jobs/mo.
-                    </li>
-                    <li>
-                      <strong>auto</strong> sync
-                    </li>
-                    <li class="plan-action">
-                     <a href="#" class="btn btn-success btn-lg">Sign up</a>
-                 </li>
-             </ul>
-         </div>
+          <div class="col-lg-2 col-md-3 col-xs-6">
+            <ul class="plan plan2">
+              <li class="plan-name">
+                  Entry
+              </li>
+              <li class="plan-price">
+                  <strong>$39</strong> / mo.
+              </li>
+              <li>
+                  <strong>1</strong> project
+              </li>
+              <li>
+                  <strong>1</strong> user
+              </li>
+              <li>
+                  <strong>2</strong> apps
+              </li>
+              <li>
+                  <strong>3</strong> maps
+              </li>
+              <li>
+                  <strong>limited</strong> support
+              </li>
+              <li>
+                  <strong>1000</strong> jobs/mo.
+              </li>
+              <li>
+                <strong>auto</strong> sync
+              </li>
+              <li class="plan-action">
+               <a href="#" class="btn btn-success btn-lg">Sign up</a>
+              </li>
+            </ul>
+          </div>
 
-         <div class="col-lg-2 col-md-3 col-xs-6">
+          <div class="col-lg-2 col-md-3 col-xs-6">
             <ul class="plan plan3 featured">
               <li class="plan-name">
                   Startup
@@ -155,7 +158,8 @@
              <a href="#" class="btn btn-success btn-lg">Sign up</a>
          </li>
      </ul>
- </div>
+    </div>
+    
       <div class="col-lg-2 col-md-3 col-xs-6">
         <ul class="plan plan4">
             <li class="plan-name">
@@ -190,6 +194,3 @@
          </li>
      </ul>
  </div>
-</div>
-<!-- <div class="col-md-10 col-md-offset-1">*Contact us to increase this limit.</div> -->
-</div>
