--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -2,7 +2,7 @@
   <!-- Full Width Image Header -->
   <header class="header-image">
     <div class="headline">
-      <h3>Technology isn't the answer,</br>but it shouldn't be the problem.</h3>
+      <h3>Technology isn't the answer,<br>but it shouldn't be the problem.</h3>
     </div>
   </header>
 
