--- a/public/the_bridge_templates/static/welcome2.html
+++ b/public/the_bridge_templates/static/welcome2.html
@@ -11,7 +11,7 @@
       <div class="col-md-2 col-md-offset-2">
         <div class="headline numbers">
           <h3 style="color: #f8ca4d">50k+</h3>
-          <h4>JOBS</h4>
+          <h4>TRANSACTIONS</h4>
         </div>
       </div>
 
