--- a/public/the_bridge_templates/static/welcome2.html
+++ b/public/the_bridge_templates/static/welcome2.html
@@ -5,37 +5,37 @@
       <h3>Technology isn't the answer,<br>but it shouldn't be the problem.</h3>
     </div>
 
-    <div class="row" style="height: 350px"></div>
+    <div class="row hidden-xs" style="height: 350px"></div>
 
-    <div class="row">
-      <div class="col-md-2 col-md-offset-2">
+    
+      <div class="col-xs-6 col-sm-2 col-sm-offset-2">
         <div class="headline numbers">
           <h3 style="color: #f8ca4d">50k+</h3>
           <h4>TRANSACTIONS</h4>
         </div>
       </div>
 
-      <div class="col-md-2">
+      <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
           <h3 style="color: #f8ca4d">91</h3>
           <h4>TECHNOLOGIES</h4>
         </div>
       </div>
 
-      <div class="col-md-2">
+      <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
           <h3>N</h3>
           <h4>CONNECTED APPS</h4>
         </div>
       </div>
 
-      <div class="col-md-2">
+      <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
           <h3>X</h3>
           <h4>ORGANIZATIONS</h4>
         </div>
       </div>
-    </div>
+    
 
   </header>
 
