--- a/public/the_bridge_templates/static/welcome2.html
+++ b/public/the_bridge_templates/static/welcome2.html
@@ -45,12 +45,11 @@
 
     <hr class="dark">
     <hr class="light">
-
     <div class="container">
   
       <a href="#/marketplace/">
         <div class="row">
-          <div class="col-md-6 col-md-push-6">
+          <div class="col-md-5 col-md-offset-1 col-md-push-6">
             <div class="openmarket-featurette-image center-block">
             </div>
           </div>
