--- a/public/the_bridge_templates/static/welcome2.html
+++ b/public/the_bridge_templates/static/welcome2.html
@@ -7,7 +7,7 @@
 
     <div class="row hidden-xs" style="height: 350px"></div>
 
-    
+    <div class="row">
       <div class="col-xs-6 col-sm-2 col-sm-offset-2">
         <div class="headline numbers">
           <h3 style="color: #f8ca4d">50k+</h3>
@@ -35,6 +35,7 @@
           <h4>ORGANIZATIONS</h4>
         </div>
       </div>
+    </div>
     
 
   </header>
