--- a/public/the_bridge_templates/static/developers.html
+++ b/public/the_bridge_templates/static/developers.html
@@ -1,4 +1,4 @@
-<div class="pricing">
+<div class="devs">
 <div class="ideas">
 
 <header class="header-image">
@@ -19,9 +19,12 @@
       
       <br>
 
+
       <div class="row flat">
-        *metadata layer
-        <div class="col-lg-2 col-md-3 col-xs-6 col-lg-offset-5">
+        &nbsp;&nbsp;*metadata layer
+        <br>
+        <br>
+        <div class="col-xs-12 col-md-2 col-md-offset-5">
           <ul class="plan plan1 featured">
             <li class="plan-name">
                 Describe
@@ -38,12 +41,12 @@
 
       <br>
       <br>
-      <br>
-      <br>
 
       <div class="row flat">
-        *data layer
-        <div class="col-lg-2 col-md-3 col-xs-6 col-lg-offset-1">
+        &nbsp;&nbsp;*data layer
+        <br>
+        <br>
+        <div class="col-xs-12 col-md-2 col-md-offset-1">
           <ul class="plan plan1">
             <li class="plan-name">
                 Listen API
@@ -59,9 +62,9 @@
 
 
 
-        <div class="col-lg-2 col-md-3 col-xs-6">
+        <div class="col-xs-12 col-md-2">
           <ul class="plan plan2 featured">
-            <li class="plan-name">
+            <li class="plan-name devs">
                 Serialize to JSON
             </li>
             <li class="plan-price">
@@ -75,7 +78,7 @@
 
 
 
-        <div class="col-lg-2 col-md-3 col-xs-6">
+        <div class="col-xs-12 col-md-2">
           <ul class="plan plan3">
             <li class="plan-name">
                 Map
@@ -91,7 +94,7 @@
 
 
 
-        <div class="col-lg-2 col-md-3 col-xs-6">
+        <div class="col-xs-12 col-md-2">
             <ul class="plan plan4 featured">
                 <li class="plan-name">
                     Deserialize from JSON
@@ -107,7 +110,7 @@
 
 
         
-        <div class="col-lg-2 col-md-3 col-xs-6">
+        <div class="col-xs-12 col-md-2">
           <ul class="plan plan4">
               <li class="plan-name">
                   Send
