--- a/public/the_bridge_templates/static/welcome2.html
+++ b/public/the_bridge_templates/static/welcome2.html
@@ -1,6 +1,7 @@
 <div class="welcome2">
   <!-- Full Width Image Header -->
   <header class="header-image">
+    <div class="header-detail">
     <div class="headline">
       <h3>Technology isn't the answer,<br>but it shouldn't be the problem.</h3>
     </div>
@@ -35,6 +36,7 @@
           <h4>ORGANIZATIONS</h4>
         </div>
       </div>
+    </div>
     </div>
     
 
