--- a/public/the_bridge_templates/static/welcome2.html
+++ b/public/the_bridge_templates/static/welcome2.html
@@ -32,7 +32,7 @@
 
       <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
-          <h3>5</h3>
+          <h3 style="color: #f8ca4d">5</h3>
           <h4>ORGANIZATIONS</h4>
         </div>
       </div>
