Display the count of votes

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -43,7 +43,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
-                &nbsp;({{votes.length}} votes for integration)
+                &nbsp;({{product.votes.length}} votes for integration)
               </div>
               <h3 class="title">
                 {{product.name}}
@@ -62,9 +62,10 @@
               <a ng-click="changeVote(product.id)" class="details-link">
                 +<i class="fa fa-cube"></i>
               </a>
-
+  
             </div>
           </div>
+
 
         </div>
 
