--- a/public/the_bridge_templates/static/welcome2.html
+++ b/public/the_bridge_templates/static/welcome2.html
@@ -18,7 +18,7 @@
 
       <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
-          <h3 style="color: #f8ca4d">{{productCount}}</h3>
+          <h3 style="color: #f8ca4d">{{productPublicCount}}</h3>
           <h4>TECHNOLOGIES</h4>
         </div>
       </div>
