--- a/public/the_bridge_templates/static/welcome2.html
+++ b/public/the_bridge_templates/static/welcome2.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-xs-6 col-sm-2 col-sm-offset-2">
         <div class="headline numbers">
-          <h3 style="color: #f8ca4d">50k+</h3>
+          <h3 style="color: #f8ca4d">{{submissionCount}}</h3>
           <h4>TRANSACTIONS</h4>
         </div>
       </div>
@@ -25,7 +25,7 @@
 
       <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
-          <h3>N</h3>
+          <h3>{{productConnectedCount}}</h3>
           <h4>CONNECTED APPS</h4>
         </div>
       </div>
