--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -1,4 +1,4 @@
-<div class="welcome2">
+<div class="welcome">
   <!-- Full Width Image Header -->
   <header class="header-image">
     <div class="header-detail">
@@ -11,28 +11,28 @@
     <div class="row">
       <div class="col-xs-6 col-sm-2 col-sm-offset-2">
         <div class="headline numbers">
-          <h3 style="color: #f8ca4d">{{submissionCount | number }}</h3>
+          <h3>{{submissionCount | number }}</h3>
           <h4>TRANSACTIONS</h4>
         </div>
       </div>
 
       <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
-          <h3 style="color: #f8ca4d">{{productPublicCount}}</h3>
+          <h3>{{productPublicCount}}</h3>
           <h4>TECHNOLOGIES</h4>
         </div>
       </div>
 
       <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
-          <h3 style="color: #f8ca4d">{{productConnectedCount}}</h3>
+          <h3>{{productConnectedCount}}</h3>
           <h4>CONNECTED APPS</h4>
         </div>
       </div>
 
       <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
-          <h3 style="color: #f8ca4d">{{orgCount}}</h3>
+          <h3>{{orgCount}}</h3>
           <h4>ORGANIZATIONS</h4>
         </div>
       </div>
