--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -43,7 +43,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
-                &nbsp;({{product.votes}} votes for integration)
+                &nbsp;({{product.votes_count}} votes for integration)
               </div>
               <h3 class="title">
                 {{product.name}}
