--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -50,7 +50,7 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-                  <a href="#" class="btn btn-success btn-lg">Sign up</a>
+                  <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
               </li>  
             </ul>
           </div>
@@ -85,7 +85,7 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-               <a href="#" class="btn btn-success btn-lg">Sign up</a>
+               <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
               </li>
             </ul>
           </div>
@@ -120,7 +120,7 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-               <a href="#" class="btn btn-danger btn-lg">Sign up</a>
+               <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-danger btn-lg">Sign up</a>
              </li>
          </ul>
      </div>
@@ -155,7 +155,7 @@
                 <strong><i class="fa fa-bolt"></i> rapid</strong> sync
             </li>
             <li class="plan-action">
-             <a href="#" class="btn btn-success btn-lg">Sign up</a>
+             <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
          </li>
      </ul>
     </div>
@@ -190,7 +190,7 @@
                 <strong><i class="fa fa-bolt"></i> rapid</strong> sync
             </li>
             <li class="plan-action">
-             <a href="#" class="btn btn-success btn-lg">Sign up</a>
+             <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
          </li>
      </ul>
  </div>
