--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -57,9 +57,9 @@
                 <i class="fa fa-external-link"></i>
               </a>
               
-              <a ng-mouseover="hoverIn()" ng-href="/#/product/{{product.id}}" class="details-link">
-                DETAIL
-              </a>
+<!--               <a ng-mouseover="hoverIn()" ng-href="/#/product/{{product.id}}" class="details-link">
+                DETAILS
+              </a> -->
               <a href="/mappings" class="vote-link" ng-show="product.integrated" ng-click="$event.stopPropagation()">
                 <i class="fa fa-plug"></i>
               </a>
